# redis5-cmake

./: .gitignore  CMakeLists.txt  redis.conf
src/: .gitignore  CMakeLists.txt  Makefile.source  adlist.c  adlist.h  ae.c  ae.h  ae_epoll.c  ae_kqueue.c  anet.c  aof.c  atomicvar.h  bio.c  blocked.c  childinfo.c  cluster.c  cluster.h  config.c  db.c  debug.c  dict.c  dict.h  evict.c  expire.c  latency.h  lazyfree.c  multi.c  networking.c  notify.c  object.c  rdb.c  replication.c  rio.h  sds.c  sds.h  sentinel.c  server.c  server.h  setproctitle.c  siphash.c  (+4 more)
